applications/model-registry/upstream/options/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: model-registry-service
spec:
  host: model-registry-service.kubeflow.svc.cluster.pakcarik
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
